grammar.js
    source_file: ($) => seq(repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    _type: ($) => choice($._option_type, $.union_type),

    let_declaration: ($) =>
      seq(
        "let",
        // optional($.mutable_specifier),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        // optional(seq("else", field("alternative", $.block))),
        ";",
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _pattern: ($) =>
      choice(
        $._literal_pattern,
        alias(choice(...primitive_types), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.tuple_pattern,
        // $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        "_",
      ),

    integer_literal: (_) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(choice(...numeric_types)),
        ),
      ),

    string_literal: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),

    raw_string_literal: ($) => seq("r", $.string_literal),

    string_template: ($) =>
      seq(
        "`",
        repeat(
          choice(
            alias($.string_template_fragment, $.string_fragment),
            $.escape_sequence,
            $.string_template_substitution,
          ),
        ),
        "`",
      ),

    string_template_substitution: ($) => seq("${", $._expression, "}"),

    char_literal: (_) =>
      token(
        seq(
          optional("b"),
          "'",
          optional(
            choice(
              seq(
                "\\",
                choice(
                  /[^xu]/,
                  /u[0-9a-fA-F]{4}/,
                  /u{[0-9a-fA-F]+}/,
                  /x[0-9a-fA-F]{2}/,
                ),
              ),
              /[^\\']/,
            ),
          ),
          "'",
        ),
      ),

    bool_literal: (_) => choice("true", "false"),

    nil_literal: (_) => "nil",

    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,
